@@ -45,7 +45,6 @@ import com.android.tools.idea.gradle.dsl.parser.semantics.PropertiesElementDescr
 import com.android.tools.idea.gradle.dsl.parser.semantics.SemanticsDescription;
 import com.android.tools.idea.gradle.dsl.parser.settings.ProjectPropertiesDslElement;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.Predicates;
 import com.intellij.psi.PsiElement;
@@ -64,6 +63,7 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 /**
  * Base class for {@link GradleDslElement}s that represent a closure block or a map element. It provides the functionality to store the
@@ -74,13 +74,13 @@ import org.jetbrains.annotations.Nullable;
 public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
   private static final Logger LOG = Logger.getInstance(GradlePropertiesDslElement.class);
 
-  @NotNull private final static Predicate<ElementList.ElementItem> VARIABLE_FILTER =
+  private static final @NotNull Predicate<ElementList.ElementItem> VARIABLE_FILTER =
     e -> e.myElement.getElementType() == PropertyType.VARIABLE;
   // This filter currently gives us everything that is not a variable.
-  @NotNull private final static Predicate<ElementList.ElementItem> PROPERTY_FILTER = VARIABLE_FILTER.negate();
-  @NotNull private final static Predicate<ElementList.ElementItem> ANY_FILTER = Predicates.alwaysTrue();
+  private static final @NotNull Predicate<ElementList.ElementItem> PROPERTY_FILTER = VARIABLE_FILTER.negate();
+  private static final @NotNull Predicate<ElementList.ElementItem> ANY_FILTER = Predicates.alwaysTrue();
 
-  @NotNull public final ElementList myProperties = new ElementList();
+  public final @NotNull ElementList myProperties = new ElementList();
 
   protected GradlePropertiesDslElement(@Nullable GradleDslElement parent,
                                        @Nullable PsiElement psiElement,
@@ -281,9 +281,8 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     addPropertyInternal(literalList, EXISTING);
   }
 
-  @Nullable
-  private static PsiElement mungeElementsForAddToParsedExpressionList(@NotNull GradleDslElement dslElement,
-                                                                      @NotNull List<GradleDslElement> newDslElements) {
+  private static @Nullable PsiElement mungeElementsForAddToParsedExpressionList(@NotNull GradleDslElement dslElement,
+                                                                                @NotNull List<GradleDslElement> newDslElements) {
     PsiElement psiElement = dslElement.getPsiElement();
     if (psiElement == null) {
       return null;
@@ -391,19 +390,16 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     }
   }
 
-  @NotNull
-  private static final ImmutableMap<String,PropertiesElementDescription> NO_CHILD_PROPERTIES_ELEMENTS = ImmutableMap.of();
+  private static final @NotNull Map<String, PropertiesElementDescription> NO_CHILD_PROPERTIES_ELEMENTS = Map.of();
 
   public static final class EmptyGradlePropertiesDslElementSchema extends GradlePropertiesDslElementSchema {
-    @NotNull
     @Override
-    public ImmutableMap<String, PropertiesElementDescription> getBlockElementDescriptions() {
+    public @NotNull Map<String, PropertiesElementDescription> getBlockElementDescriptions() {
       return NO_CHILD_PROPERTIES_ELEMENTS;
     }
 
-    @NotNull
     @Override
-    public ExternalToModelMap getPropertiesInfo(GradleDslNameConverter.Kind kind) {
+    public @NotNull ExternalToModelMap getPropertiesInfo(GradleDslNameConverter.Kind kind) {
       return ExternalToModelMap.empty;
     }
   }
@@ -418,8 +414,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
    *
    * @return a map of external names to descriptions of the corresponding properties element.
    */
-  @NotNull
-  protected ImmutableMap<String,PropertiesElementDescription> getChildPropertiesElementsDescriptionMap() {
+  protected @NotNull @Unmodifiable Map<String, PropertiesElementDescription> getChildPropertiesElementsDescriptionMap() {
     return NO_CHILD_PROPERTIES_ELEMENTS;
   }
 
@@ -428,13 +423,11 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
    * @return the properties element description corresponding to the given name in the context of this block, or null if no such properties
    * element exists in the Dsl.
    */
-  @Nullable
-  public PropertiesElementDescription getChildPropertiesElementDescription(String name) {
+  public @Nullable PropertiesElementDescription getChildPropertiesElementDescription(String name) {
     return getChildPropertiesElementsDescriptionMap().get(name);
   }
 
-  @NotNull
-  public Set<String> getProperties() {
+  public @NotNull Set<String> getProperties() {
     return getPropertyElements().keySet();
   }
 
@@ -442,13 +435,11 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
    * Note: This function does NOT guarantee that only elements belonging to properties are returned, since this class is also used
    * for maps it is also possible for the resulting elements to be of {@link PropertyType#DERIVED}.
    */
-  @NotNull
-  public Map<String, GradleDslElement> getPropertyElements() {
+  public @NotNull Map<String, GradleDslElement> getPropertyElements() {
     return getElementsWhere(PROPERTY_FILTER);
   }
 
-  @NotNull
-  public <T extends GradleDslElement> List<T> getPropertyElements(@NotNull String name, @NotNull Class<T> clazz) {
+  public @NotNull <T extends GradleDslElement> List<T> getPropertyElements(@NotNull String name, @NotNull Class<T> clazz) {
     return myProperties.getElementsWhere(PROPERTY_FILTER).stream()
                        .filter(e -> clazz.isAssignableFrom(e.getClass()) && e.getName().equals(name))
                        .map(e -> clazz.cast(e)).collect(Collectors.toList());
@@ -457,28 +448,23 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
   /**
    * @return all elements that visible now (effective elements)
    */
-  @NotNull
-  public List<GradleDslElement> getAllPropertyElements() {
+  public @NotNull List<GradleDslElement> getAllPropertyElements() {
     return myProperties.getElementsWhere(PROPERTY_FILTER);
   }
 
-  @NotNull
-  public Map<String, GradleDslElement> getVariableElements() {
+  public @NotNull Map<String, GradleDslElement> getVariableElements() {
     return getElementsWhere(VARIABLE_FILTER);
   }
 
-  @NotNull
-  public Map<String, GradleDslElement> getElements() {
+  public @NotNull Map<String, GradleDslElement> getElements() {
     return getElementsWhere(ANY_FILTER);
   }
 
-  @NotNull
-  public List<GradleDslElement> getAllElements() {
+  public @NotNull List<GradleDslElement> getAllElements() {
     return myProperties.getElementsWhere(ANY_FILTER);
   }
 
-  @NotNull
-  private Map<String, GradleDslElement> getElementsWhere(@NotNull Predicate<ElementList.ElementItem> predicate) {
+  private @NotNull Map<String, GradleDslElement> getElementsWhere(@NotNull Predicate<ElementList.ElementItem> predicate) {
     Map<String, GradleDslElement> results = new LinkedHashMap<>();
     List<GradleDslElement> elements = myProperties.getElementsWhere(predicate);
     for (GradleDslElement element : elements) {
@@ -514,8 +500,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     return myProperties.getElementBeforeChildWhere(predicate, element, includeSelf);
   }
 
-  @Nullable
-  public GradleDslElement getVariableElement(@NotNull String property) {
+  public @Nullable GradleDslElement getVariableElement(@NotNull String property) {
     return getElementWhere(property, VARIABLE_FILTER);
   }
 
@@ -523,23 +508,19 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
    * Returns the {@link GradleDslElement} corresponding to the given {@code property}, or {@code null} if the given {@code property}
    * does not exist in this element.
    */
-  @Nullable
-  public GradleDslElement getPropertyElement(@NotNull String property) {
+  public @Nullable GradleDslElement getPropertyElement(@NotNull String property) {
     return getElementWhere(property, PROPERTY_FILTER);
   }
 
-  @Nullable
-  public GradleDslElement getPropertyElement(@NotNull ModelPropertyDescription property) {
+  public @Nullable GradleDslElement getPropertyElement(@NotNull ModelPropertyDescription property) {
     return getElementWhere(property, PROPERTY_FILTER);
   }
 
-  @Nullable
-  public GradleDslElement getElement(@NotNull String property) {
+  public @Nullable GradleDslElement getElement(@NotNull String property) {
     return getElementWhere(property, ANY_FILTER);
   }
 
-  @Nullable
-  public GradleDslElement getPropertyElementBefore(@Nullable GradleDslElement element, @NotNull String property, boolean includeSelf) {
+  public @Nullable GradleDslElement getPropertyElementBefore(@Nullable GradleDslElement element, @NotNull String property, boolean includeSelf) {
     if (element == null) {
       return getElementWhere(property, PROPERTY_FILTER);
     }
@@ -562,32 +543,27 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
    * Returns the dsl element of the given {@code property} of the type {@code clazz}, or {@code null} if the given {@code property}
    * does not exist in this element.
    */
-  @Nullable
-  public <T extends GradleDslElement> T getPropertyElement(@NotNull String property, @NotNull Class<T> clazz) {
+  public @Nullable <T extends GradleDslElement> T getPropertyElement(@NotNull String property, @NotNull Class<T> clazz) {
     GradleDslElement propertyElement = getPropertyElement(property);
     return clazz.isInstance(propertyElement) ? clazz.cast(propertyElement) : null;
   }
 
-  @Nullable
-  public <T extends GradleDslElement> T getPropertyElement(@NotNull ModelPropertyDescription property, @NotNull Class<T> clazz) {
+  public @Nullable <T extends GradleDslElement> T getPropertyElement(@NotNull ModelPropertyDescription property, @NotNull Class<T> clazz) {
     GradleDslElement propertyElement = getPropertyElement(property);
     return clazz.isInstance(propertyElement) ? clazz.cast(propertyElement) : null;
   }
 
 
-  @Nullable
-  public <T extends GradlePropertiesDslElement> T getPropertyElement(@NotNull PropertiesElementDescription<T> description) {
+  public @Nullable <T extends GradlePropertiesDslElement> T getPropertyElement(@NotNull PropertiesElementDescription<T> description) {
     assert description.name != null;
     return getPropertyElement(description.name, description.clazz);
   }
 
-  @NotNull
-  public <T extends GradlePropertiesDslElement> T ensurePropertyElement(@NotNull PropertiesElementDescription<T> description) {
+  public @NotNull <T extends GradlePropertiesDslElement> T ensurePropertyElement(@NotNull PropertiesElementDescription<T> description) {
     return ensurePropertyElementAt(description, null);
   }
 
-  @NotNull
-  public <T extends GradlePropertiesDslElement, U> T ensurePropertyElementBefore(
+  public @NotNull <T extends GradlePropertiesDslElement, U> T ensurePropertyElementBefore(
     @NotNull PropertiesElementDescription<T> description,
     Class<U> before
   ) {
@@ -602,8 +578,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     return ensurePropertyElementAt(description, at);
   }
 
-  @NotNull
-  public <T extends GradlePropertiesDslElement> T ensureNamedPropertyElement(
+  public @NotNull <T extends GradlePropertiesDslElement> T ensureNamedPropertyElement(
     PropertiesElementDescription<T> description,
     GradleNameElement name
   ) {
@@ -616,8 +591,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     return newElement;
   }
 
-  @NotNull
-  public <T extends GradlePropertiesDslElement> T ensurePropertyElementAt(PropertiesElementDescription<T> description, Integer at) {
+  public @NotNull <T extends GradlePropertiesDslElement> T ensurePropertyElementAt(PropertiesElementDescription<T> description, Integer at) {
     T propertyElement = getPropertyElement(description);
     if (propertyElement != null) return propertyElement;
     T newElement;
@@ -632,33 +606,28 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     return newElement;
   }
 
-  @Nullable
-  public <T extends GradleDslElement> T getPropertyElement(@NotNull List<String> properties, @NotNull Class<T> clazz) {
+  public @Nullable <T extends GradleDslElement> T getPropertyElement(@NotNull List<String> properties, @NotNull Class<T> clazz) {
     GradleDslElement propertyElement = myProperties.getElementWhere(e -> properties.contains(e.myElement.getName()));
     return clazz.isInstance(propertyElement) ? clazz.cast(propertyElement) : null;
   }
 
-  @NotNull
-  public <T extends GradleDslElement> List<T> getPropertyElements(@NotNull Class<T> clazz) {
+  public @NotNull <T extends GradleDslElement> List<T> getPropertyElements(@NotNull Class<T> clazz) {
     return myProperties.getElementsWhere(PROPERTY_FILTER).stream().filter(e -> clazz.isAssignableFrom(e.getClass())).map(e -> clazz.cast(e))
                        .collect(Collectors.toList());
   }
 
-  @NotNull
-  public List<GradleDslElement> getPropertyElementsByName(@NotNull String propertyName) {
+  public @NotNull List<GradleDslElement> getPropertyElementsByName(@NotNull String propertyName) {
     return myProperties.getElementsWhere(e -> e.myElement.getName().equals(propertyName) && PROPERTY_FILTER.test(e));
   }
 
   /**
    * @return All elements that loaded from file
    */
-  @NotNull
-  public List<GradleDslElement> getOriginalElements() {
+  public @NotNull List<GradleDslElement> getOriginalElements() {
     return myProperties.myElements.stream().filter(e -> e.myExistsOnFile).map(e -> e.myElement).collect(Collectors.toList());
   }
 
-  @Nullable
-  public GradleDslElement getOriginalElementForNameAndType(@NotNull String name, @NotNull PropertyType type) {
+  public @Nullable GradleDslElement getOriginalElementForNameAndType(@NotNull String name, @NotNull PropertyType type) {
     return myProperties.myElements.stream().filter(
       e -> e.myElement.getName().equals(name) && e.myExistsOnFile && e.myElement.getElementType() == type).map(e -> e.myElement)
                                   .reduce((a, b) -> b).orElse(null);
@@ -667,8 +636,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
   /**
    * @return all the elements which represent the current state of the Dsl object, including modifications.
    */
-  @NotNull
-  public List<GradleDslElement> getCurrentElements() {
+  public @NotNull List<GradleDslElement> getCurrentElements() {
     Predicate<ElementList.ElementItem> currentElementFilter = e ->
       e.myElementState == TO_BE_ADDED ||
       e.myElementState == EXISTING ||
@@ -725,8 +693,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     myProperties.substituteElement(oldElement, newElement);
   }
 
-  @Nullable
-  public <T> T getLiteral(@NotNull String property, @NotNull Class<T> clazz) {
+  public @Nullable <T> T getLiteral(@NotNull String property, @NotNull Class<T> clazz) {
     GradleDslSimpleExpression expression = getPropertyElement(property, GradleDslSimpleExpression.class);
     if (expression == null) {
       return null;
@@ -735,13 +702,11 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
     return expression.getValue(clazz);
   }
 
-  @NotNull
-  public GradleDslLiteral setNewLiteral(@NotNull String property, @NotNull Object value) {
+  public @NotNull GradleDslLiteral setNewLiteral(@NotNull String property, @NotNull Object value) {
     return setNewLiteralImpl(property, value);
   }
 
-  @NotNull
-  private GradleDslLiteral setNewLiteralImpl(@NotNull String property, @NotNull Object value) {
+  private @NotNull GradleDslLiteral setNewLiteralImpl(@NotNull String property, @NotNull Object value) {
     GradleDslLiteral literalElement = getPropertyElement(property, GradleDslLiteral.class);
     if (literalElement == null) {
       literalElement = new GradleDslLiteral(this, GradleNameElement.create(property));
@@ -796,8 +761,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
   }
 
   @Override
-  @Nullable
-  public GradleDslElement requestAnchor(@NotNull GradleDslElement element) {
+  public @Nullable GradleDslElement requestAnchor(@NotNull GradleDslElement element) {
     // We need to find the element before `element` in my properties. The last one that has a psiElement, has the same name scheme as
     // the given element (to ensure that they should be placed in the same block) and must have a state of EXISTING, TO_BE_ADDED or MOVED.
     GradleDslElement lastElement = null;
@@ -832,14 +796,12 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
   }
 
   @Override
-  @NotNull
-  public Collection<GradleDslElement> getChildren() {
+  public @NotNull Collection<GradleDslElement> getChildren() {
     return getAllElements();
   }
 
   @Override
-  @NotNull
-  public List<GradleDslElement> getContainedElements(boolean includeProperties) {
+  public @NotNull List<GradleDslElement> getContainedElements(boolean includeProperties) {
     List<GradleDslElement> result = new ArrayList<>();
     if (includeProperties) {
       result.addAll(getElementsWhere(e -> (e.myElementState != APPLIED && !e.isDefaultElement())).values());
@@ -958,8 +920,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
   }
 
   @Override
-  @NotNull
-  public List<GradleReferenceInjection> getDependencies() {
+  public @NotNull List<GradleReferenceInjection> getDependencies() {
     return myProperties.getElementsWhere(e -> e.myElementState != APPLIED).stream().map(GradleDslElement::getDependencies)
                        .flatMap(Collection::stream).collect(
         Collectors.toList());
@@ -995,8 +956,8 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
      * Wrapper to add state to each element.
      */
     public static class ElementItem {
-      @NotNull private GradleDslElement myElement;
-      @NotNull private ElementState myElementState;
+      private @NotNull GradleDslElement myElement;
+      private @NotNull ElementState myElementState;
       // Whether or not this element item exists in THIS DSL file. While element state == EXISTING implies this is true,
       // the reverse doesn't apply.
       private boolean myExistsOnFile;
@@ -1015,7 +976,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
       }
     }
 
-    @NotNull private final List<ElementItem> myElements;
+    private final @NotNull List<ElementItem> myElements;
 
     public ElementList() {
       myElements = new ArrayList<>();
@@ -1025,14 +986,12 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
       myElements.forEach(func);
     }
 
-    @NotNull
-    private List<GradleDslElement> getElementsWhere(@NotNull Predicate<ElementItem> predicate) {
+    private @NotNull List<GradleDslElement> getElementsWhere(@NotNull Predicate<ElementItem> predicate) {
       return myElements.stream().filter(e -> e.myElementState.isSemanticallyRelevant())
                        .filter(predicate).map(e -> e.myElement).collect(Collectors.toList());
     }
 
-    @Nullable
-    public GradleDslElement getElementWhere(@NotNull Predicate<ElementItem> predicate) {
+    public @Nullable GradleDslElement getElementWhere(@NotNull Predicate<ElementItem> predicate) {
       // We reduce to get the last element stored, this will be the one we want as it was added last and therefore must appear
       // later on in the file.
       GradleDslElement last = myElements.stream()
@@ -1049,8 +1008,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
      * Return the last element satisfying {@code predicate} that is BEFORE {@code child}. If {@code child} is not a child of
      * this {@link GradlePropertiesDslElement} then every element is checked and the last one (if any) returned.
      */
-    @Nullable
-    public GradleDslElement getElementBeforeChildWhere(@NotNull Predicate<ElementItem> predicate,
+    public @Nullable GradleDslElement getElementBeforeChildWhere(@NotNull Predicate<ElementItem> predicate,
                                                        @NotNull GradleDslElement child,
                                                        boolean includeSelf) {
       // TODO(b/181308123): this is used primarily (maybe exclusively?) for resolution: when the rvalue of a property refers to
@@ -1124,8 +1082,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
       return myElements.size();
     }
 
-    @Nullable
-    private ElementState remove(@NotNull GradleDslElement element) {
+    private @Nullable ElementState remove(@NotNull GradleDslElement element) {
       ElementItem item = myElements.stream().filter(e -> element == e.myElement).findFirst().orElse(null);
       if (item == null) {
         return null;
@@ -1145,8 +1102,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
       return oldState;
     }
 
-    @Nullable
-    private ElementState replaceElement(@Nullable GradleDslElement oldElement, @NotNull GradleDslElement newElement) {
+    private @Nullable ElementState replaceElement(@Nullable GradleDslElement oldElement, @NotNull GradleDslElement newElement) {
       for (int i = 0; i < myElements.size(); i++) {
         ElementItem item = myElements.get(i);
         if (oldElement == item.myElement) {
@@ -1163,8 +1119,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
       return null;
     }
 
-    @Nullable
-    private ElementState substituteElement(@Nullable GradleDslElement oldElement, @NotNull GradleDslElement newElement) {
+    private @Nullable ElementState substituteElement(@Nullable GradleDslElement oldElement, @NotNull GradleDslElement newElement) {
       for (int i = 0; i < myElements.size(); i++) {
         ElementItem item = myElements.get(i);
         if (oldElement == item.myElement) {
@@ -1182,8 +1137,7 @@ public abstract class GradlePropertiesDslElement extends GradleDslElementImpl {
       return null;
     }
 
-    @NotNull
-    private List<GradleDslElement> removeAll(@NotNull Predicate<ElementItem> filter) {
+    private @NotNull List<GradleDslElement> removeAll(@NotNull Predicate<ElementItem> filter) {
       List<ElementItem> toBeRemoved = myElements.stream().filter(filter).collect(Collectors.toList());
       toBeRemoved.forEach(e -> e.myElementState = TO_BE_REMOVED);
       return ContainerUtil.map(toBeRemoved, e -> e.myElement);
